--- a/patient_portal/package.json
+++ b/patient_portal/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-calendar": "^3.4.0",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
