--- a/patient_portal/package.json
+++ b/patient_portal/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "chart.js": "^3.5.1",
+    "formik": "^2.2.9",
     "jquery": "^3.6.0",
     "json-server": "^0.16.3",
     "json-server-auth": "^2.1.0",
