--- a/patient_portal/package.json
+++ b/patient_portal/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "chart.js": "^3.5.1",
+    "date-fns": "^2.0.0-beta.5",
     "formik": "^2.2.9",
     "jquery": "^3.6.0",
     "json-server": "^0.16.3",
