--- a/patient_portal/package.json
+++ b/patient_portal/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.5.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -12,12 +13,14 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
     "chart.js": "^3.5.1",
+    "classnames": "^2.3.1",
     "date-fns": "^2.0.0-beta.5",
     "formik": "^2.2.9",
     "jquery": "^3.6.0",
     "json-server": "^0.16.3",
     "json-server-auth": "^2.1.0",
     "material-table": "^1.69.3",
+    "material-ui-image": "^3.3.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-calendar": "^3.4.0",
