--- a/patient_portal/package.json
+++ b/patient_portal/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^1.6.4",
     "react-calendar": "^3.4.0",
     "react-chartjs-2": "^3.0.5",
+    "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-mui-scheduler": "^1.2.5",
