--- a/patient_portal/package.json
+++ b/patient_portal/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^3.5.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.0.0-beta.5",
+    "enzyme": "^3.11.0",
     "formik": "^2.2.9",
     "jquery": "^3.6.0",
     "json-server": "^0.16.3",
@@ -35,6 +36,7 @@
     "react-slick": "^0.28.1",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1",
@@ -66,6 +68,7 @@
     ]
   },
   "devDependencies": {
-    "@iconify/react": "^3.0.1"
+    "@iconify/react": "^3.0.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5"
   }
 }
