--- a/patient_portal/package.json
+++ b/patient_portal/package.json
@@ -39,6 +39,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-mock-store": "^1.5.4",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2",
